start working on pipeline pass debugger